# PlaneBattle

./: CMakeLists.txt  CMakePresets.json  README.md
Logger/: CMakeLists.txt
Logger/include/: ConsoleOutput.h  FileOutput.h  ILoggerOutput.h  LogLevel.h  Logger.h  LoggerApi.h  framework.h  pch.h
Logger/src/: FileOutput.cpp  Logger.cpp  LoggerApi.cpp  dllmain.cpp
Plane/: CMakeLists.txt
Plane/include/controller/: BaseController.h  BulletController.h  EnemyController.h  GameController.h  PlayerController.h
Plane/include/easyx/: easyx_own.h
Plane/include/entity/: BaseEntity.h  Bullet.h  BulletType.h  Enemy1.h  Enemy2.h  EnemyBullet.h  OwnBullet.h  Plane.h  Player.h
Plane/include/screen/: BaseScreen.h  GameScreen.h  PauseScreen.h  StartScreen.h
Plane/include/util/: Base.h  Globals.h  MessageListener.h  MessageType.h  MusicPlayer.h
Plane/src/: main.cpp
Plane/src/controller/: BulletController.cpp  EnemyController.cpp  GameController.cpp  PlayerController.cpp
Plane/src/easyx/: easyx_own.cpp
Plane/src/entity/: BaseEntity.cpp  Bullet.cpp  Enemy1.cpp  Enemy2.cpp  EnemyBullet.cpp  OwnBullet.cpp  Plane.cpp  Player.cpp
Plane/src/screen/: BaseScreen.cpp  GameScreen.cpp  PauseScreen.cpp  StartScreen.cpp
Plane/src/util/: Base.cpp  Globals.cpp  MessageListener.cpp  MusicPlayer.cpp
